// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainTitle it should render 1`] = `
.c0 {
  color: #ddd;
  font-family: 'Lato',Helvetica,arial,sans-serif;
  font-size: 16px;
  -webkit-letter-spacing: 2.5px;
  -moz-letter-spacing: 2.5px;
  -ms-letter-spacing: 2.5px;
  letter-spacing: 2.5px;
  text-transform: uppercase;
  -webkit-transition: color 350ms ease;
  transition: color 350ms ease;
  cursor: pointer;
}

.c0:hover {
  color: #fff;
}

<h1
  className="c0"
/>
`;

exports[`Message it should render 1`] = `
.c0 {
  font-size: 40px;
  font-family: 'Lato',Helvetica,arial,sans-serif;
  color: #fff;
  margin-bottom: 16px;
}

<h2
  className="c0"
/>
`;

exports[`SubTitle it should render 1`] = `
.c0 {
  font-size: 32px;
  color: #fff;
  font-family: 'Raleway',Helvetica,arial,sans-serif;
}

<h2
  className="c0"
/>
`;
